--- a/web/templates/phone/index.html.eex
+++ b/web/templates/phone/index.html.eex
@@ -3,7 +3,7 @@
 <%= for user <- @phonebooks do %>
 <tr>
   
-<td><b><%= first_name(user)%></b>(<%=user.id%>)</td>
+<td><b><%= user.name%></b>(<%=user.id%>)</td>
 <td><b><%=user.number%></b></td>
 
 </tr>
